# two_very_auto

./: .env.example  .env.secure.template  .gitignore  .pre-commit-config.yaml  BACKUP_SYSTEM_README.md  CODEOWNERS  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DASHBOARD_ACCESS_GUIDE.md  DASHBOARD_INSPECTION_REPORT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_CONTINUATION_PLAN.md  EXE_사용법_가이드.txt  FASTAPI_MIGRATION_RECOMMENDATIONS.md  FINAL_IMPLEMENTATION_REPORT.md  GOVERNANCE_IMPLEMENTATION_SUMMARY.md  HOW_TO_VIEW_PAIR_INFO.md  LICENSE  PROJECT_CLEANUP_PLAN.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_HEALTH_REPORT.md  README.md  REQUIREMENTS_ANALYSIS_REPORT.md  SECURITY.md  SECURITY_OPTIMIZATION.md  SECURITY_SCAN_REPORT.md  SERVER_STABILITY_REPORT.md  TODAY_WORK_SUMMARY.md  backup_health_checker.py  backup_health_config.json  backup_history.json  backup_monitoring.py  backup_schedule_config.json  backup_scheduler.py  cleanup_report_20250826.md  cloud_auth_setup.py  cloud_config.json  dashboard_server.py  dashboard_validation.py  gameinfo.ini  (+35 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci-cd.yml  ci.yml  security.yml
backups/: manual_backup_20250828_095234_baccarat_optimized.db
cloud/: backup_manager.py  restore_system.py  s3_integration.py  secure_config_manager.py
deployment/: deploy.py  environment_manager.py
deployment/kubernetes/: production.yml
deployment/scripts/: deploy.sh
deployment/terraform/: main.tf
docker/: .dockerignore  Dockerfile.ai  Dockerfile.web  docker-compose.yml  init.sql  nginx.conf  prometheus.yml
microservices/: api_gateway.py  service_discovery.py
monitoring/: alerting_system.py  docker-compose.monitoring.yml  elk_logger.py  grafana_dashboards.py  monitoring_manager.py  prometheus_metrics.py
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
packet/20250809/: Main.txt  Rejected.txt  바카라 A_08.txt  바카라 A_09.txt  바카라 A_10.txt  바카라 A_11.txt  바카라 A_12.txt  바카라 A_13.txt  바카라 A_14.txt  바카라 A_15.txt  바카라 A_16.txt  바카라 A_17.txt  바카라 A_18.txt  바카라 A_19.txt  바카라 A_20.txt  바카라 A_21.txt  바카라 A_22.txt  바카라 A_23.txt  바카라 B_08.txt  바카라 B_09.txt  바카라 B_10.txt  바카라 B_11.txt  바카라 B_12.txt  바카라 B_13.txt  바카라 B_14.txt  바카라 B_15.txt  바카라 B_16.txt  바카라 B_17.txt  바카라 B_18.txt  바카라 B_19.txt  바카라 B_20.txt  바카라 B_21.txt  바카라 B_22.txt  바카라 B_23.txt  본자이 스피드 바카라 A_08.txt  본자이 스피드 바카라 A_09.txt  본자이 스피드 바카라 A_10.txt  본자이 스피드 바카라 A_11.txt  본자이 스피드 바카라 A_12.txt  본자이 스피드 바카라 A_13.txt  (+682 more)
packet/20250810/: Main.txt  Rejected.txt  바카라 A_00.txt  바카라 A_06.txt  바카라 A_07.txt  바카라 A_08.txt  바카라 A_09.txt  바카라 A_10.txt  바카라 A_11.txt  바카라 A_12.txt  바카라 A_13.txt  바카라 A_14.txt  바카라 A_15.txt  바카라 A_16.txt  바카라 A_17.txt  바카라 A_18.txt  바카라 A_19.txt  바카라 A_20.txt  바카라 A_21.txt  바카라 A_22.txt  바카라 A_23.txt  바카라 B_00.txt  바카라 B_06.txt  바카라 B_07.txt  바카라 B_08.txt  바카라 B_09.txt  바카라 B_10.txt  바카라 B_11.txt  바카라 B_12.txt  바카라 B_13.txt  바카라 B_14.txt  바카라 B_15.txt  바카라 B_16.txt  바카라 B_17.txt  바카라 B_18.txt  바카라 B_19.txt  바카라 B_20.txt  바카라 B_21.txt  바카라 B_22.txt  바카라 B_23.txt  (+817 more)
packet/20250811/: Main.txt  Rejected.txt  바카라 A_00.txt  바카라 A_01.txt  바카라 A_02.txt  (+1077 more)
python/: API_REFERENCE.md  README.md  UPGRADE_SUMMARY.md  advanced_ai_engine_v2.py  advanced_analytics.py  advanced_notification_system.py  ai_prediction_engine.py  analyze_rooms.py  api_integration_patch.py  automated_maintenance.py  baccarat_data.json  baccarat_monitor_pwa_v2.db  batch_packet_decoder.py  build_executable.py  card_decoding_integration.py  casino_config.json  chart_integration.py  connection_test_dashboard.py  data_validation.py  database_manager.py  encoded_card_decoder.py  enhanced_dashboard.html  enhanced_packet_decoder.py  enhanced_packet_processor.py  enhanced_room_info.py  fastapi_next_gen.py  find_card_messages.py  integrated_dashboard.py  integrated_launcher.py  ipc_communication.py  korean_encoding_fix.py  main_casino_baccarat_data.db  main_integration_service.py  main_integration_service.py.backup  minimal_demo_api.py  modern_dashboard.html  multi_casino_manager.py  notification_config.json  notification_settings_api.py  notification_system.py  (+37 more)
security/: api_security.py  authentication_system.py  data_encryption.py
static/: dashboard.css
streaming/: event_streamer.py  message_broker.py  notification_system.py  streaming_client.py  streaming_manager.py  websocket_server.py
templates/: backup_dashboard.html  dashboard.html
(+1058 files in other folders)
